--- a/expo-hello-world/package.json
+++ b/expo-hello-world/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "main": "App.js",
   "private": true,
+  "scripts": {
+    "start": "expo start",
+    "web": "expo start --web"
+  },
   "dependencies": {
     "expo": "^50.0.0",
     "react": "^18.2.0",
-    "react-native": "^0.73.0"
+    "react-dom": "^18.2.0",
+    "react-native": "^0.73.0",
+    "react-native-web": "^0.20.5"
   }
 }
